{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 84,
  "lineage": "930e1e09-69f1-ee26-312f-1988c59e98d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f247a102cfe6171",
            "association_id": "eipassoc-034e66aeaf443f832",
            "domain": "vpc",
            "id": "eipalloc-03f247a102cfe6171",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-058a2171ff21a1b92",
            "private_dns": "ip-10-1-0-218.ap-southeast-1.compute.internal",
            "private_ip": "10.1.0.218",
            "public_dns": "ec2-18-141-80-211.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.80.211",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b89f7b3f054b957e",
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:instance/i-069c5fd24bd1b83f4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069c5fd24bd1b83f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08250669340ed5bc4",
            "private_dns": "ip-10-1-0-94.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.94",
            "public_dns": "ec2-18-143-117-141.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.117.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a196d22141fc0bd1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e12621f8f6fe82f",
            "tags": {
              "Name": "dev1"
            },
            "tags_all": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-034ae9f5bada872a2"
            ]
          },
          "dependencies": [
            "aws_subnet.dev-public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:internet-gateway/igw-07c664707593ec618",
            "id": "igw-07c664707593ec618",
            "owner_id": "905757435282",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0939d995e8c53ef93"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f247a102cfe6171",
            "connectivity_type": "public",
            "id": "nat-0d3fd9fefa58f9de3",
            "network_interface_id": "eni-058a2171ff21a1b92",
            "private_ip": "10.1.0.218",
            "public_ip": "18.141.80.211",
            "subnet_id": "subnet-06e12621f8f6fe82f",
            "tags": {
              "Name": "dev-natgw"
            },
            "tags_all": {
              "Name": "dev-natgw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.dev-public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pri-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:route-table/rtb-07bee51485fb2e1b9",
            "id": "rtb-07bee51485fb2e1b9",
            "owner_id": "905757435282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d3fd9fefa58f9de3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-pri-route"
            },
            "tags_all": {
              "Name": "dev-pri-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0939d995e8c53ef93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_subnet.dev-public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:route-table/rtb-0c5b18a5082ff6318",
            "id": "rtb-0c5b18a5082ff6318",
            "owner_id": "905757435282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c664707593ec618",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-pub-route"
            },
            "tags_all": {
              "Name": "dev-pub-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0939d995e8c53ef93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d291a7fb074e1fb4",
            "route_table_id": "rtb-07bee51485fb2e1b9",
            "subnet_id": "subnet-0fba0ab56720c3a4e"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-pri-route",
            "aws_subnet.dev-data",
            "aws_subnet.dev-public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034bbd8235d3bc25f",
            "route_table_id": "rtb-07bee51485fb2e1b9",
            "subnet_id": "subnet-04ba876556434b5c4"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-pri-route",
            "aws_subnet.dev-data",
            "aws_subnet.dev-public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c79b2c806843594",
            "route_table_id": "rtb-07bee51485fb2e1b9",
            "subnet_id": "subnet-06b961b2c8f1861b5"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-pri-route",
            "aws_subnet.dev-data",
            "aws_subnet.dev-public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f8c07477d1a6e10",
            "route_table_id": "rtb-07bee51485fb2e1b9",
            "subnet_id": "subnet-0d6a8d9fdb896adbd"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-pri-route",
            "aws_subnet.dev-private",
            "aws_subnet.dev-public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d7f0b9fbcdf9896",
            "route_table_id": "rtb-07bee51485fb2e1b9",
            "subnet_id": "subnet-05e3b8cef49a59dfd"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-pri-route",
            "aws_subnet.dev-private",
            "aws_subnet.dev-public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2d4878b39a82411",
            "route_table_id": "rtb-07bee51485fb2e1b9",
            "subnet_id": "subnet-0f7b80aa52b0d9a0f"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-pri-route",
            "aws_subnet.dev-private",
            "aws_subnet.dev-public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002df75ec7b5eb74d",
            "route_table_id": "rtb-0c5b18a5082ff6318",
            "subnet_id": "subnet-06e12621f8f6fe82f"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.dev-pub-route",
            "aws_subnet.dev-public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064922e41dd66171d",
            "route_table_id": "rtb-0c5b18a5082ff6318",
            "subnet_id": "subnet-035a682f028ee64f1"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.dev-pub-route",
            "aws_subnet.dev-public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a379abdf3ef21c1d",
            "route_table_id": "rtb-0c5b18a5082ff6318",
            "subnet_id": "subnet-0b0352081e093709b"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.dev-pub-route",
            "aws_subnet.dev-public",
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:subnet/subnet-0fba0ab56720c3a4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fba0ab56720c3a4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905757435282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-data1 subnet",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-data1 subnet",
              "terraform": "true"
            },
            "vpc_id": "vpc-0939d995e8c53ef93"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:subnet/subnet-04ba876556434b5c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ba876556434b5c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905757435282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-data2 subnet",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-data2 subnet",
              "terraform": "true"
            },
            "vpc_id": "vpc-0939d995e8c53ef93"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:subnet/subnet-06b961b2c8f1861b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b961b2c8f1861b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905757435282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-data3 subnet",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-data3 subnet",
              "terraform": "true"
            },
            "vpc_id": "vpc-0939d995e8c53ef93"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:subnet/subnet-0d6a8d9fdb896adbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6a8d9fdb896adbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905757435282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private1 subnet",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private1 subnet",
              "terraform": "true"
            },
            "vpc_id": "vpc-0939d995e8c53ef93"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:subnet/subnet-05e3b8cef49a59dfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e3b8cef49a59dfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905757435282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private2 subnet",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private2 subnet",
              "terraform": "true"
            },
            "vpc_id": "vpc-0939d995e8c53ef93"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:subnet/subnet-0f7b80aa52b0d9a0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7b80aa52b0d9a0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905757435282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private3 subnet",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private3 subnet",
              "terraform": "true"
            },
            "vpc_id": "vpc-0939d995e8c53ef93"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:subnet/subnet-06e12621f8f6fe82f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e12621f8f6fe82f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905757435282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public1 subnet",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public1 subnet",
              "terraform": "true"
            },
            "vpc_id": "vpc-0939d995e8c53ef93"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:subnet/subnet-035a682f028ee64f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035a682f028ee64f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905757435282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public2 subnet",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public2 subnet",
              "terraform": "true"
            },
            "vpc_id": "vpc-0939d995e8c53ef93"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:subnet/subnet-0b0352081e093709b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0352081e093709b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905757435282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public3 subnet",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public3 subnet",
              "terraform": "true"
            },
            "vpc_id": "vpc-0939d995e8c53ef93"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905757435282:vpc/vpc-0939d995e8c53ef93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-07222c9861cd036fc",
            "default_route_table_id": "rtb-01d06bfc4c858cff3",
            "default_security_group_id": "sg-034ae9f5bada872a2",
            "dhcp_options_id": "dopt-083722fe1aafa1cf9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0939d995e8c53ef93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d06bfc4c858cff3",
            "owner_id": "905757435282",
            "tags": {
              "Name": "dev-vpc",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}